# meteodata-server

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  NEWS  README  README.md  configure.ac  meteodata_minmax_schema.cql  meteodata_month_minmax_schema.cql  meteodata_new_schema.cql  meteodata_records_schema.cql  meteodata_schema.cql
src/: Makefile.am  abstract_download_scheduler.cpp  abstract_download_scheduler.h  abstractsynopdownloader.cpp  async_job_publisher.cpp  async_job_publisher.h  blocking_tcp_client.h  cassandra_utils.h  config.h  connector.cpp  connector.h  connector_group.cpp  connector_group.h  curl_wrapper.cpp  curl_wrapper.h  daemon.cpp  date_utils.h  dbconnection.cpp  dbconnection.h  dbconnection_common.cpp  dbconnection_common.h  dbconnection_minmax.cpp  dbconnection_minmax.h  dbconnection_month_minmax.cpp  dbconnection_month_minmax.h  deferredsynopdownloader.cpp  deferredsynopdownloader.h  documentation.h  hex_parser.h  http_connection.cpp  http_connection.h  http_utils.h  mbdatatxtdownloader.cpp  mbdatatxtdownloader.h  message.cpp  message.h  meteo_server.cpp  meteo_server.h  meteofranceshipandbuoy.cpp  meteofranceshipandbuoy.h  (+45 more)
src/barani/: barani_anemometer_2023_message.cpp  barani_anemometer_2023_message.h  barani_anemometer_2026_message.cpp  barani_anemometer_2026_message.h  barani_anemometer_message.cpp  barani_anemometer_message.h  barani_meteoag_2022_message.cpp  barani_meteoag_2022_message.h  barani_rain_gauge_message.cpp  barani_rain_gauge_message.h  barani_thermohygro_2026_message.cpp  barani_thermohygro_2026_message.h  barani_thermohygro_message.cpp  barani_thermohygro_message.h
src/cimel/: cimel440204_importer.cpp  cimel440204_importer.h  cimel4A_import_standalone.cpp  cimel4A_importer.cpp  cimel4A_importer.h  cimel_http_request_handler.cpp  cimel_http_request_handler.h  cimel_import_standalone.cpp  cimel_importer.cpp  cimel_importer.h
src/control/: connectors_query_handler.cpp  connectors_query_handler.h  control_connector.cpp  control_connector.h  exporters_query_handler.cpp  exporters_query_handler.h  general_query_handler.cpp  general_query_handler.h  meteodatactl.cpp  query_handler.cpp  query_handler.h
src/custom/: oseren_soil_station_message.cpp  oseren_soil_station_message.h
src/davis/: abstract_weatherlink_api_message.cpp  abstract_weatherlink_api_message.h  abstract_weatherlink_downloader.h  csv_import_standalone.cpp  csv_importer.h  mileos_importer.h  mileos_message.cpp  mileos_message.h  monitorII_archive_entry.cpp  monitorII_archive_entry.h  monitorII_http_request_handler.cpp  monitorII_http_request_handler.h  vantagepro2_archive_message.cpp  vantagepro2_archive_message.h  vantagepro2_archive_page.cpp  vantagepro2_archive_page.h  vantagepro2_connector.cpp  vantagepro2_connector.h  vantagepro2_http_request_handler.cpp  vantagepro2_http_request_handler.h  vantagepro2_message.cpp  vantagepro2_message.h  weatherlink_api_realtime_message.cpp  weatherlink_api_realtime_message.h  weatherlink_apiv1_realtime_message.cpp  weatherlink_apiv1_realtime_message.h  weatherlink_apiv2_archive_message.cpp  weatherlink_apiv2_archive_message.h  weatherlink_apiv2_archive_page.cpp  weatherlink_apiv2_archive_page.h  weatherlink_apiv2_download_scheduler.cpp  weatherlink_apiv2_download_scheduler.h  weatherlink_apiv2_downloader.cpp  weatherlink_apiv2_downloader.h  weatherlink_apiv2_downloader_offload.cpp  weatherlink_apiv2_downloader_standalone.cpp  weatherlink_apiv2_ingester_standalone.cpp  weatherlink_apiv2_parser_trait.h  weatherlink_apiv2_realtime_message.cpp  weatherlink_apiv2_realtime_message.h  (+12 more)
src/dragino/: concept500_message.cpp  concept500_message.h  cpl01_pluviometer_message.cpp  cpl01_pluviometer_message.h  llms01_leaf_sensor_message.cpp  llms01_leaf_sensor_message.h  lse01_soil_sensor_message.cpp  lse01_soil_sensor_message.h  lsn50v2_d2x_message.cpp  lsn50v2_d2x_message.h  lsn50v2_probe6470_message.cpp  lsn50v2_probe6470_message.h  lsn50v2_thermohygrometer_message.cpp  lsn50v2_thermohygrometer_message.h  sn50v3_probe6470_message.cpp  sn50v3_probe6470_message.h  thpllora_message.cpp  thpllora_message.h  thplnbiot_message.cpp  thplnbiot_message.h  thwlora_message.cpp  thwlora_message.h  thwnbiot_message.cpp  thwnbiot_message.h
src/event/: event.h  event_manager.cpp  event_manager.h  new_datapoint_event.cpp  new_datapoint_event.h  subscriber.h
src/export/: exporter.cpp  exporter.h  ffvl_exporter.cpp  ffvl_exporter.h
src/liveobjects/: liveobjects_api_downloader.cpp  liveobjects_api_downloader.h  liveobjects_api_downloader_standalone.cpp  liveobjects_http_decoding_request_handler.cpp  liveobjects_http_decoding_request_handler.h  liveobjects_message.cpp  liveobjects_message.h
src/mbdata/: mbdata_download_scheduler.cpp  mbdata_download_scheduler.h  mbdata_downloader_offload.cpp  mbdata_standalone.cpp  mbdata_txt_downloader.cpp  mbdata_txt_downloader.h
src/mbdatamessages/: abstractmbdatamessage.cpp  abstractmbdatamessage.h  mbdatamessagefactory.h  mbdatameteohubmessage.cpp  mbdatameteohubmessage.h  mbdataweathercatmessage.cpp  mbdataweathercatmessage.h  mbdataweatherdisplaymessage.cpp  mbdataweatherdisplaymessage.h  mbdataweatherlinkmessage.cpp  mbdataweatherlinkmessage.h  mbdatawswinmessage.cpp  mbdatawswinmessage.h
src/meteo_france/: meteo_france_api_6m_downloader.cpp  meteo_france_api_6m_downloader.h  meteo_france_api_all_stations_downloader_standalone.cpp  meteo_france_api_bulk_downloader.cpp  meteo_france_api_bulk_downloader.h  meteo_france_api_download_scheduler.cpp  meteo_france_api_download_scheduler.h  meteo_france_api_downloader.cpp  meteo_france_api_downloader.h  meteo_france_api_downloader_standalone.cpp  mf_radome_message.cpp  mf_radome_message.h
src/minmax/: minmax.cpp  minmax_computer.cpp  minmax_computer.h  minmax_daemon.cpp  minmax_worker.cpp  minmax_worker.h
src/monitoring/: watchdog.cpp  watchdog.h
src/month_minmax/: month_minmax.cpp  month_minmax_computer.cpp  month_minmax_computer.h  month_minmax_daemon.cpp  month_minmax_worker.cpp  month_minmax_worker.h
src/mqtt/: generic_message.cpp  (+32 more)
(+115 files in other folders)
